<resources>
    <string name="app_name">Mornings</string>
    <string name="action_settings">Settings</string>
    <string name="sart">sart</string>
    <string name="close">close</string>
    <string name="inFN">inutile FNow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="OkLetsGo">Money</string>
    <string name="kmDepart">Km depart</string>
    <string name="kmarrive">Km arrivée</string>
    <string name="chequestxs">ChequesTxs</string>
    <string name="facturation">Facturation</string>
    <string name="carte">Carte</string>
    <string name="cancelbutton">Cancel</string>
    <string name="Envoyer">OK</string>
    <string name="ferie">férié</string>
    <string name="checkferie">ferié</string>
    <string name="title_activity_price_acivity">priceAcivity</string>
</resources>
