<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jibs.taximornings.MainActivity"
    tools:showIn="@layout/activity_main"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center|top"
        android:text="@string/OkLetsGo"
        android:textSize="40sp" />

    <GridLayout
        android:padding="29dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnCount="2"
        android:rowCount="9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Km depart"
            android:id="@+id/kmdep"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="5dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="6"
            android:id="@+id/sendKmDep"
            android:layout_row="0"
            android:layout_column="1"
            android:inputType="number"
            android:text="0"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/kmarrive"
            android:id="@+id/kmArr"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="5dp"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="number"
            android:ems="6"
            android:id="@+id/sendKmArr"
            android:layout_row="1"
            android:layout_column="1"
            android:text="0"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/chequestxs"
            android:id="@+id/cheques"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="5dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="6"
            android:id="@+id/sendCheques"
            android:layout_row="3"
            android:layout_column="1"
            android:inputType="numberDecimal"
            android:text="0.0"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/facturation"
            android:id="@+id/facturation"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_margin="5dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="numberDecimal"
            android:ems="6"
            android:id="@+id/sendFacture"
            android:layout_row="4"
            android:layout_column="1"
            android:text="0.0"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="numberDecimal"
            android:ems="6"
            android:id="@+id/sendCard"
            android:layout_row="5"
            android:layout_column="1"
            android:text="0.0"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/carte"
            android:id="@+id/carte"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_margin="5dp"/>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:text="7è"
            android:textSize="20sp"
            android:layout_row="6"
            android:layout_column="0"
            android:id="@+id/checkBox" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:text="@string/checkferie"
            android:textSize="20sp"
            android:layout_row="6"
            android:layout_column="1"
            android:id="@+id/checkBoxFerie" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Envoyer"
            android:id="@+id/button3"
            android:layout_row="7"
            android:onClick="okButtonClick"
            android:layout_column="0" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelbutton"
            android:id="@+id/button4"
            android:layout_row="7"
            android:layout_column="1"
            android:onClick="cancelButton"/>


    </GridLayout>

</LinearLayout>
