<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_start" tools:context=".StartActivity"
    android:orientation="vertical"
    android:background="#f5f2f2">


    <TextView android:text="Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:layout_margin="20dp"
        android:gravity="center|top"
        android:textSize="50sp"
        android:layout_gravity="center|top"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:layout_margin="40dp"
        android:text="@string/sart"
        android:textSize="50sp"
        android:background="#83f3e0"
        android:clickable="true"
        android:onClick="startButton"/>
    <GridLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:columnCount="2"
        android:weightSum="1"
        >


        <Button
            android:layout_width="175dp"
            android:layout_height="70dp"
            android:text="@string/inFN"
            android:id="@+id/button"
            android:clickable="true"
            android:background="#000000"
            android:textColor="#e4e4e4"
            />

        <Button
            android:layout_width="175dp"
            android:layout_height="70dp"
            android:text="@string/close"
            android:id="@+id/button2"
            android:clickable="true"
            android:background="#c5de696b"
            android:onClick="closeAppli"/>
    </GridLayout>

</LinearLayout>
